--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body { font-family:'Segoe UI',Arial,sans-serif; background:#0b0f17; color:#f5f5f5; margin:0; padding:0; }
-header { background:linear-gradient(90deg,#0a84ff,#0ad4a6); padding:22px; text-align:center; color:white; box-shadow:0 0 18px rgba(0,0,0,0.7); }
+header { display:flex; align-items:center; justify-content:center; gap:12px; background:linear-gradient(90deg,#0a84ff,#0ad4a6); padding:22px; color:white; box-shadow:0 0 18px rgba(0,0,0,0.7); }
+header img { height:50px; }
 header h1 { margin:0; font-size:2.4rem; }
 header p { margin:6px 0 0; font-size:1rem; opacity:.95; }
 .container { max-width:1200px; margin:26px auto; padding:18px; background:#12151b; border-radius:12px; box-shadow:0 0 22px rgba(0,0,0,0.45); }
@@ -37,7 +38,9 @@ select, .small-input { padding:8px 10px; border-radius:6px; border:none; backgro
 </style>
 </head>
 <body>
+
 <header>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Simple_shield_icon.svg/1024px-Simple_shield_icon.svg.png" alt="Cybersecurity Logo">
 <h1>MellowTech AI Cybersecurity Defender</h1>
 <p>Smart Detection • Instant Defense • Predictive Intelligence</p>
 </header>
