--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+                   
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -157,4 +158,4 @@ function simulateCyberDrill(){ addLog('Simulating cyber drill...'); setTimeout((
 function generateReport(){ addLog('Generating quick security report...'); setTimeout(()=>{ addLog('Report ready. All threats neutralized.'); },1500); }
 </script>
 </body>
-</html>                       
+</html>                       please add back the  cybersecurity logo like shild
