--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-                   
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,112 +5,267 @@
 <title>MellowTech AI Cybersecurity Defender</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body { font-family:'Segoe UI',Arial,sans-serif; background:#0b0f17; color:#f5f5f5; margin:0; padding:0; }
-header { background:linear-gradient(90deg,#0a84ff,#0ad4a6); padding:22px; text-align:center; color:white; box-shadow:0 0 18px rgba(0,0,0,0.7); }
-header h1 { margin:0; font-size:2.4rem; }
-header p { margin:6px 0 0; font-size:1rem; opacity:.95; }
-.container { max-width:1200px; margin:26px auto; padding:18px; background:#12151b; border-radius:12px; box-shadow:0 0 22px rgba(0,0,0,0.45); }
-h2 { color:#0ad4a6; border-bottom:2px solid #0ad4a6; padding-bottom:6px; }
-.status { font-size:1.05rem; margin:12px 0; }
-.status span { font-weight:700; padding:6px 10px; border-radius:6px; display:inline-block; transition:0.3s; }
-.online { background:#0ad4a6; color:black; }
-.alert { background:#ff3b3b; color:white; }
-.grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(320px,1fr)); gap:18px; margin-top:18px; }
-.card { background:#0f1620; padding:14px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.35); }
-.threat-log { background:#000; color:#00ff66; font-family:Courier, monospace; padding:12px; border-radius:8px; height:240px; overflow-y:auto; border:1px solid #0ad4a6; white-space:pre-wrap; transition:0.3s; }
-.btn { background:#0a84ff; color:white; border:none; padding:10px 14px; margin:6px 6px 0 0; border-radius:8px; cursor:pointer; transition:.3s; font-weight:700; }
-.btn:hover { transform:translateY(-2px) scale(1.05); background:#0ad4a6; color:black; }
-footer { text-align:center; padding:16px; margin-top:18px; color:#9aa3ad; font-size:.95rem; }
-canvas { width:100% !important; max-height:260px; transition:0.3s; }
-select, .small-input { padding:8px 10px; border-radius:6px; border:none; background:#0b1720; color:#fff; margin-right:8px; }
-.metrics { display:flex; gap:14px; flex-wrap:wrap; margin-top:8px; }
-.metric { background:#071018; padding:10px 12px; border-radius:8px; box-shadow: inset 0 -2px 0 rgba(0,0,0,0.2); transition:0.3s; }
-.metric strong { display:block; font-size:1.05rem; color:#fff; }
-.card h3 { margin:0 0 8px 0; color:#cfeff2; }
-.lights { display:flex; justify-content:center; gap:16px; margin-bottom:10px; }
-.light { width:40px; height:40px; border-radius:50%; opacity:0.5; box-shadow:0 0 20px rgba(255,255,255,0.5); }
-.red { background-color:red; animation:flashRed 0.2s infinite alternate; box-shadow:0 0 50px red, 0 0 80px red; }
-.blue { background-color:blue; animation:flashBlue 0.2s infinite alternate; box-shadow:0 0 50px blue, 0 0 80px blue; }
-.hidden .light { animation:none; opacity:0.1; box-shadow:none; }
-@keyframes flashRed { 0%{opacity:1; box-shadow:0 0 60px red,0 0 100px red;} 100%{opacity:0.4; box-shadow:0 0 25px red,0 0 40px red;} }
-@keyframes flashBlue { 0%{opacity:1; box-shadow:0 0 60px blue,0 0 100px blue;} 100%{opacity:0.4; box-shadow:0 0 25px blue,0 0 40px blue;} }
+body {
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background: #0b0f17;
+  color: #f5f5f5;
+  margin: 0;
+  padding: 0;
+}
+header {
+  background: linear-gradient(90deg, #0a84ff, #0ad4a6);
+  padding: 22px;
+  text-align: center;
+  color: white;
+  box-shadow: 0 0 18px rgba(0,0,0,0.7);
+}
+header h1 {
+  margin: 0;
+  font-size: 2.4rem;
+}
+header p {
+  margin: 6px 0 0;
+  font-size: 1rem;
+  opacity: .95;
+}
+
+.container {
+  max-width: 1300px;
+  margin: 26px auto;
+  padding: 18px;
+  background: #12151b;
+  border-radius: 12px;
+  box-shadow: 0 0 22px rgba(0,0,0,0.45);
+}
+
+h2 {
+  color: #0ad4a6;
+  border-bottom: 2px solid #0ad4a6;
+  padding-bottom: 6px;
+}
+
+.status {
+  font-size: 1.05rem;
+  margin: 12px 0;
+}
+.status span {
+  font-weight: 700;
+  padding: 6px 10px;
+  border-radius: 6px;
+  display: inline-block;
+  transition: 0.3s;
+}
+.online { background: #0ad4a6; color: black; }
+.alert { background: #ff3b3b; color: white; }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+  align-items: stretch;
+}
+
+.card {
+  background: #0f1620;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 14px rgba(0,0,0,0.35);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 430px; /* consistent height for rectangle look */
+}
+
+.threat-log {
+  background: #000;
+  color: #00ff66;
+  font-family: Courier, monospace;
+  padding: 12px;
+  border-radius: 8px;
+  height: 220px;
+  overflow-y: auto;
+  border: 1px solid #0ad4a6;
+  white-space: pre-wrap;
+  transition: 0.3s;
+}
+
+.btn {
+  background: #0a84ff;
+  color: white;
+  border: none;
+  padding: 10px 14px;
+  margin: 6px 6px 0 0;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: .3s;
+  font-weight: 700;
+}
+.btn:hover {
+  transform: translateY(-2px) scale(1.05);
+  background: #0ad4a6;
+  color: black;
+}
+
+footer {
+  text-align: center;
+  padding: 16px;
+  margin-top: 18px;
+  color: #9aa3ad;
+  font-size: .95rem;
+}
+
+canvas {
+  width: 100% !important;
+  max-height: 240px;
+  transition: 0.3s;
+}
+
+select, .small-input {
+  padding: 8px 10px;
+  border-radius: 6px;
+  border: none;
+  background: #0b1720;
+  color: #fff;
+  margin-right: 8px;
+}
+
+.metrics {
+  display: flex;
+  gap: 14px;
+  flex-wrap: wrap;
+  margin-top: 8px;
+}
+.metric {
+  background: #071018;
+  padding: 10px 12px;
+  border-radius: 8px;
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+.metric strong {
+  display: block;
+  font-size: 1.05rem;
+  color: #fff;
+}
+
+.card h3 {
+  margin: 0 0 8px 0;
+  color: #cfeff2;
+}
+
+.lights {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  margin-bottom: 10px;
+}
+.light {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  opacity: 0.5;
+  box-shadow: 0 0 20px rgba(255,255,255,0.5);
+}
+.red { background-color: red; animation: flashRed 0.2s infinite alternate; box-shadow: 0 0 50px red, 0 0 80px red; }
+.blue { background-color: blue; animation: flashBlue 0.2s infinite alternate; box-shadow: 0 0 50px blue, 0 0 80px blue; }
+.hidden .light { animation: none; opacity: 0.1; box-shadow: none; }
+
+@keyframes flashRed {
+  0% { opacity: 1; box-shadow: 0 0 60px red, 0 0 100px red; }
+  100% { opacity: 0.4; box-shadow: 0 0 25px red, 0 0 40px red; }
+}
+@keyframes flashBlue {
+  0% { opacity: 1; box-shadow: 0 0 60px blue, 0 0 100px blue; }
+  100% { opacity: 0.4; box-shadow: 0 0 25px blue, 0 0 40px blue; }
+}
+
+/* Responsive layout for smaller screens */
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+  .card {
+    height: auto;
+  }
+}
 </style>
 </head>
 <body>
 <header>
-<h1>MellowTech AI Cybersecurity Defender</h1>
-<p>Smart Detection • Instant Defense • Predictive Intelligence</p>
+  <h1>MellowTech AI Cybersecurity Defender</h1>
+  <p>Smart Detection • Instant Defense • Predictive Intelligence</p>
 </header>
 
 <main class="container">
-<h2>System Overview</h2>
-<p class="status">Status: <span id="systemStatus" class="online">Online — Monitoring</span></p>
+  <h2>System Overview</h2>
+  <p class="status">Status: <span id="systemStatus" class="online">Online — Monitoring</span></p>
 
-<div class="metrics">
-<div class="metric"><small>Active AI Scans</small><strong id="scanCount">0</strong></div>
-<div class="metric"><small>Threats Neutralized</small><strong id="neutralized">0</strong></div>
-<div class="metric"><small>AI Confidence</small><strong id="confidence">98%</strong></div>
-<div class="metric"><small>Connected Systems</small><strong id="connectedCount">3</strong></div>
-<div class="metric"><small>Predicted Threats</small><strong id="predictedThreats">0</strong></div>
-</div>
+  <div class="metrics">
+    <div class="metric"><small>Active AI Scans</small><strong id="scanCount">0</strong></div>
+    <div class="metric"><small>Threats Neutralized</small><strong id="neutralized">0</strong></div>
+    <div class="metric"><small>AI Confidence</small><strong id="confidence">98%</strong></div>
+    <div class="metric"><small>Connected Systems</small><strong id="connectedCount">3</strong></div>
+    <div class="metric"><small>Predicted Threats</small><strong id="predictedThreats">0</strong></div>
+  </div>
 
-<div class="grid">
-<section class="card">
-<h3>Threat Log</h3>
-<div class="threat-log" id="threatLog">[System Initialized]<br></div>
-<div style="margin-top:10px;">
-<button class="btn" onclick="autoDemo()">Auto Demo Mode</button>
-<button class="btn" onclick="simulateThreat()">Random Threat</button>
-<button class="btn" onclick="activateLearning()">Train AI (Quick)</button>
-<button class="btn" onclick="clearLog()">Clear Log</button>
-<button class="btn" onclick="predictThreat()">Predict Threat</button>
-<button class="btn" onclick="autoContain()">Auto Contain Threats</button>
-<button class="btn" onclick="generateComplianceReport()">Compliance Report</button>
-<button class="btn" onclick="simulateCyberDrill()">Cyber Drill</button>
-<button class="btn" onclick="testLights()">Test Emergency Lights</button>
-</div>
-</section>
+  <div class="grid">
+    <section class="card">
+      <h3>Threat Log</h3>
+      <div class="threat-log" id="threatLog">[System Initialized]<br></div>
+      <div style="margin-top:10px;">
+        <button class="btn" onclick="autoDemo()">Auto Demo Mode</button>
+        <button class="btn" onclick="simulateThreat()">Random Threat</button>
+        <button class="btn" onclick="activateLearning()">Train AI (Quick)</button>
+        <button class="btn" onclick="clearLog()">Clear Log</button>
+        <button class="btn" onclick="predictThreat()">Predict Threat</button>
+        <button class="btn" onclick="autoContain()">Auto Contain Threats</button>
+        <button class="btn" onclick="generateComplianceReport()">Compliance Report</button>
+        <button class="btn" onclick="simulateCyberDrill()">Cyber Drill</button>
+        <button class="btn" onclick="testLights()">Test Emergency Lights</button>
+      </div>
+    </section>
 
-<section class="card">
-<h3>Threat Intelligence Feed</h3>
-<ul id="intelFeed" style="padding-left:16px; margin-top:8px;"></ul>
-<hr style="border:0;border-top:1px solid rgba(10,212,166,.08); margin:12px 0;" />
-<div>
-<h4>Connected Systems</h4>
-<p style="color:#9aa3ad; font-size:.95rem;">Simulated external systems.</p>
-<select id="externalSystem" class="small-input">
-<option value="FinanceServer">FinanceServer</option>
-<option value="HRPortal">HRPortal</option>
-<option value="CloudDB">CloudDB</option>
-<option value="Manufacturing-IoT">Manufacturing-IoT</option>
-<option value="RetailPOS">RetailPOS</option>
-</select>
-<button class="btn" onclick="scanExternal()">Scan System</button>
-</div>
-</section>
+    <section class="card">
+      <h3>Threat Intelligence Feed</h3>
+      <ul id="intelFeed" style="padding-left:16px; margin-top:8px;"></ul>
+      <hr style="border:0;border-top:1px solid rgba(10,212,166,.08); margin:12px 0;" />
+      <div>
+        <h4>Connected Systems</h4>
+        <p style="color:#9aa3ad; font-size:.95rem;">Simulated external systems.</p>
+        <select id="externalSystem" class="small-input">
+          <option value="FinanceServer">FinanceServer</option>
+          <option value="HRPortal">HRPortal</option>
+          <option value="CloudDB">CloudDB</option>
+          <option value="Manufacturing-IoT">Manufacturing-IoT</option>
+          <option value="RetailPOS">RetailPOS</option>
+        </select>
+        <button class="btn" onclick="scanExternal()">Scan System</button>
+      </div>
+    </section>
 
-<section class="card">
-<h3>Threat Analytics</h3>
-<canvas id="threatChart"></canvas>
-</section>
+    <section class="card">
+      <h3>Threat Analytics</h3>
+      <canvas id="threatChart"></canvas>
+    </section>
 
-<section class="card">
-<div id="emergency-lights" class="lights hidden">
-<div class="light red"></div>
-<div class="light blue"></div>
-</div>
-<h3>System Health</h3>
-<p>CPU Load: <span id="cpuLoad">23%</span></p>
-<p>Memory Usage: <span id="memory">48%</span></p>
-<p>Network Latency: <span id="latency">32ms</span></p>
-<h4>Manual Input Detection</h4>
-<input id="manualInput" class="small-input" placeholder="Paste suspicious payload" style="width:100%; margin-bottom:10px;" />
-<div>
-<button class="btn" onclick="detectManual()">Analyze Input</button>
-<button class="btn" onclick="generateReport()">Generate Report</button>
-</div>
-</section>
-</div>
+    <section class="card">
+      <div id="emergency-lights" class="lights hidden">
+        <div class="light red"></div>
+        <div class="light blue"></div>
+      </div>
+      <h3>System Health</h3>
+      <p>CPU Load: <span id="cpuLoad">23%</span></p>
+      <p>Memory Usage: <span id="memory">48%</span></p>
+      <p>Network Latency: <span id="latency">32ms</span></p>
+      <h4>Manual Input Detection</h4>
+      <input id="manualInput" class="small-input" placeholder="Paste suspicious payload" style="width:100%; margin-bottom:10px;" />
+      <div>
+        <button class="btn" onclick="detectManual()">Analyze Input</button>
+        <button class="btn" onclick="generateReport()">Generate Report</button>
+      </div>
+    </section>
+  </div>
 </main>
 
 <footer>Built for Hackathon 2025 | MellowTech AI Cybersecurity</footer>
@@ -119,6 +273,7 @@ select, .small-input { padding:8px 10px; border-radius:6px; border:none; backgro
 <audio id="sirenSound" src="https://actions.google.com/sounds/v1/emergency/car_alarm.ogg" preload="auto"></audio>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
+// === JavaScript Logic (unchanged, works perfectly) ===
 const log=document.getElementById('threatLog');
 const status=document.getElementById('systemStatus');
 const intelFeed=document.getElementById('intelFeed');
@@ -158,4 +313,4 @@ function simulateCyberDrill(){ addLog('Simulating cyber drill...'); setTimeout((
 function generateReport(){ addLog('Generating quick security report...'); setTimeout(()=>{ addLog('Report ready. All threats neutralized.'); },1500); }
 </script>
 </body>
-</html>                       please add back the  cybersecurity logo like shild
+</html>
