--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>MellowTech AI Cybersecurity Defender</title>
+<title>MellowSecure – AI Cybersecurity Defender</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -19,9 +19,17 @@ header {
   color: white;
   box-shadow: 0 0 18px rgba(0,0,0,0.7);
 }
-header h1 {
-  margin: 0;
-  font-size: 2.4rem;
+header img {
+  width: 260px;
+  max-width: 80%;
+  height: auto;
+  display: block;
+  margin: 0 auto 8px auto;
+  filter: drop-shadow(0 0 8px rgba(10, 212, 166, 0.8));
+  transition: 0.3s ease;
+}
+header img:hover {
+  transform: scale(1.05);
 }
 header p {
   margin: 6px 0 0;
@@ -188,12 +196,15 @@ select, .small-input {
   .card {
     height: auto;
   }
+  header img {
+    width: 70%;
+  }
 }
 </style>
 </head>
 <body>
 <header>
-  <h1>MellowTech AI Cybersecurity Defender</h1>
+  <img src="A_2D_digital_graphic_design_features_the_logo_and_.png" alt="MellowSecure Logo">
   <p>Smart Detection • Instant Defense • Predictive Intelligence</p>
 </header>
 
@@ -268,7 +279,7 @@ select, .small-input {
   </div>
 </main>
 
-<footer>Built for Hackathon 2025 | MellowTech AI Cybersecurity</footer>
+<footer>Built for Hackathon 2025 | MellowSecure AI Cybersecurity</footer>
 
 <audio id="sirenSound" src="https://actions.google.com/sounds/v1/emergency/car_alarm.ogg" preload="auto"></audio>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -314,3 +325,4 @@ function generateReport(){ addLog('Generating quick security report...'); setTim
 </script>
 </body>
 </html>
+
