--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>MellowSecure – AI Cybersecurity Defender</title>
+<title>MellowSecure</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -12,31 +12,64 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* ===== HEADER SECTION ===== */
 header {
-  background: linear-gradient(90deg, #0a84ff, #0ad4a6);
-  padding: 22px;
+  background: radial-gradient(circle at center, #0a84ff 0%, #0ad4a6 90%);
+  padding: 40px 20px;
   text-align: center;
   color: white;
-  box-shadow: 0 0 18px rgba(0,0,0,0.7);
+  box-shadow: 0 0 25px rgba(0,0,0,0.8);
+  position: relative;
+  overflow: hidden;
 }
-header img {
-  width: 260px;
-  max-width: 80%;
-  height: auto;
-  display: block;
-  margin: 0 auto 8px auto;
-  filter: drop-shadow(0 0 8px rgba(10, 212, 166, 0.8));
-  transition: 0.3s ease;
+
+header::before, header::after {
+  content: "➤";
+  position: absolute;
+  font-size: 2.5rem;
+  color: #0ad4a6;
+  animation: rotateAround 6s linear infinite;
 }
-header img:hover {
-  transform: scale(1.05);
+
+header::before {
+  top: 10%;
+  left: 50%;
+  transform-origin: center 120px;
 }
+
+header::after {
+  bottom: 10%;
+  right: 50%;
+  transform-origin: center -120px;
+  animation-delay: 3s;
+}
+
+@keyframes rotateAround {
+  0% { transform: rotate(0deg) translateX(120px) rotate(0deg); }
+  100% { transform: rotate(360deg) translateX(120px) rotate(-360deg); }
+}
+
+header h1 {
+  margin: 0;
+  font-size: 3.5rem;
+  letter-spacing: 1px;
+  text-shadow: 0 0 25px #0ad4a6, 0 0 50px #0a84ff;
+  animation: pulseGlow 2.5s infinite alternate;
+}
+
+@keyframes pulseGlow {
+  0% { text-shadow: 0 0 20px #0ad4a6, 0 0 40px #0a84ff; }
+  100% { text-shadow: 0 0 40px #0ad4a6, 0 0 80px #0a84ff; }
+}
+
 header p {
-  margin: 6px 0 0;
-  font-size: 1rem;
+  margin: 8px 0 0;
+  font-size: 1.1rem;
   opacity: .95;
 }
 
+/* ===== MAIN DASHBOARD ===== */
 .container {
   max-width: 1300px;
   margin: 26px auto;
@@ -82,7 +115,7 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 430px; /* consistent height for rectangle look */
+  height: 430px;
 }
 
 .threat-log {
@@ -188,23 +221,17 @@ select, .small-input {
   100% { opacity: 0.4; box-shadow: 0 0 25px blue, 0 0 40px blue; }
 }
 
-/* Responsive layout for smaller screens */
+/* Responsive layout */
 @media (max-width: 768px) {
-  .grid {
-    grid-template-columns: 1fr;
-  }
-  .card {
-    height: auto;
-  }
-  header img {
-    width: 70%;
-  }
+  .grid { grid-template-columns: 1fr; }
+  .card { height: auto; }
 }
 </style>
 </head>
 <body>
+
 <header>
-  <img src="A_2D_digital_graphic_design_features_the_logo_and_.png" alt="MellowSecure Logo">
+  <h1>MellowSecure</h1>
   <p>Smart Detection • Instant Defense • Predictive Intelligence</p>
 </header>
 
@@ -284,7 +311,6 @@ select, .small-input {
 <audio id="sirenSound" src="https://actions.google.com/sounds/v1/emergency/car_alarm.ogg" preload="auto"></audio>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-// === JavaScript Logic (unchanged, works perfectly) ===
 const log=document.getElementById('threatLog');
 const status=document.getElementById('systemStatus');
 const intelFeed=document.getElementById('intelFeed');
@@ -325,4 +351,3 @@ function generateReport(){ addLog('Generating quick security report...'); setTim
 </script>
 </body>
 </html>
-
