--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ header {
   overflow: hidden;
 }
 
+/* Arrows around header */
 header::before, header::after {
   content: "➤";
   position: absolute;
@@ -31,25 +32,40 @@ header::before, header::after {
   color: #0ad4a6;
   animation: rotateAround 6s linear infinite;
 }
-
 header::before {
   top: 10%;
   left: 50%;
   transform-origin: center 120px;
 }
-
 header::after {
   bottom: 10%;
   right: 50%;
   transform-origin: center -120px;
   animation-delay: 3s;
 }
-
 @keyframes rotateAround {
   0% { transform: rotate(0deg) translateX(120px) rotate(0deg); }
   100% { transform: rotate(360deg) translateX(120px) rotate(-360deg); }
 }
 
+/* Header content flex for shield + name */
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  position: relative;
+}
+
+/* Shield styling */
+.shield {
+  font-size: 3rem;
+  color: #0ad4a6;
+  text-shadow: 0 0 10px #0a84ff;
+  animation: pulseGlow 2.5s infinite alternate;
+}
+
+/* Glowing header text */
 header h1 {
   margin: 0;
   font-size: 3.5rem;
@@ -57,7 +73,6 @@ header h1 {
   text-shadow: 0 0 25px #0ad4a6, 0 0 50px #0a84ff;
   animation: pulseGlow 2.5s infinite alternate;
 }
-
 @keyframes pulseGlow {
   0% { text-shadow: 0 0 20px #0ad4a6, 0 0 40px #0a84ff; }
   100% { text-shadow: 0 0 40px #0ad4a6, 0 0 80px #0a84ff; }
@@ -231,8 +246,13 @@ select, .small-input {
 <body>
 
 <header>
-  <h1>MellowSecure</h1>
-  <p>Smart Detection • Instant Defense • Predictive Intelligence</p>
+  <div class="header-content">
+    <span class="shield">🛡️</span>
+    <div>
+      <h1>MellowSecure</h1>
+      <p>Smart Detection • Instant Defense • Predictive Intelligence</p>
+    </div>
+  </div>
 </header>
 
 <main class="container">
