--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ body {
   color: #f5f5f5;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 /* ===== HEADER SECTION ===== */
@@ -24,7 +25,7 @@ header {
   overflow: hidden;
 }
 
-/* Arrows around header */
+/* Arrows rotating around header */
 header::before, header::after {
   content: "➤";
   position: absolute;
@@ -210,30 +211,50 @@ select, .small-input {
   color: #cfeff2;
 }
 
+/* ===== RED RIPPLE WAVE ALERT EFFECT ===== */
 .lights {
-  display: flex;
-  justify-content: center;
-  gap: 16px;
-  margin-bottom: 10px;
+  position: fixed;
+  inset: 0;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 999;
+  display: none;
 }
-.light {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  opacity: 0.5;
-  box-shadow: 0 0 20px rgba(255,255,255,0.5);
-}
-.red { background-color: red; animation: flashRed 0.2s infinite alternate; box-shadow: 0 0 50px red, 0 0 80px red; }
-.blue { background-color: blue; animation: flashBlue 0.2s infinite alternate; box-shadow: 0 0 50px blue, 0 0 80px blue; }
-.hidden .light { animation: none; opacity: 0.1; box-shadow: none; }
 
-@keyframes flashRed {
-  0% { opacity: 1; box-shadow: 0 0 60px red, 0 0 100px red; }
-  100% { opacity: 0.4; box-shadow: 0 0 25px red, 0 0 40px red; }
+.wave {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 200px;
+  height: 200px;
+  background: radial-gradient(circle, rgba(255, 0, 0, 0.6) 0%, rgba(255, 0, 0, 0.2) 40%, transparent 70%);
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  opacity: 0;
+  animation: none;
 }
-@keyframes flashBlue {
-  0% { opacity: 1; box-shadow: 0 0 60px blue, 0 0 100px blue; }
-  100% { opacity: 0.4; box-shadow: 0 0 25px blue, 0 0 40px blue; }
+
+.active-wave .wave {
+  display: block;
+  animation: rippleExpand 3s ease-out infinite;
+}
+
+@keyframes rippleExpand {
+  0% {
+    transform: translate(-50%, -50%) scale(0.2);
+    opacity: 0.8;
+    filter: blur(3px);
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(2.5);
+    opacity: 0.5;
+    filter: blur(6px);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(4);
+    opacity: 0;
+    filter: blur(10px);
+  }
 }
 
 /* Responsive layout */
@@ -254,6 +275,11 @@ select, .small-input {
     </div>
   </div>
 </header>
+
+<!-- RED RIPPLE WAVE EFFECT -->
+<div id="emergency-lights" class="lights">
+  <div class="wave"></div>
+</div>
 
 <main class="container">
   <h2>System Overview</h2>
@@ -280,7 +306,7 @@ select, .small-input {
         <button class="btn" onclick="autoContain()">Auto Contain Threats</button>
         <button class="btn" onclick="generateComplianceReport()">Compliance Report</button>
         <button class="btn" onclick="simulateCyberDrill()">Cyber Drill</button>
-        <button class="btn" onclick="testLights()">Test Emergency Lights</button>
+        <button class="btn" onclick="testLights()">Test Ripple Alert</button>
       </div>
     </section>
 
@@ -308,10 +334,6 @@ select, .small-input {
     </section>
 
     <section class="card">
-      <div id="emergency-lights" class="lights hidden">
-        <div class="light red"></div>
-        <div class="light blue"></div>
-      </div>
       <h3>System Health</h3>
       <p>CPU Load: <span id="cpuLoad">23%</span></p>
       <p>Memory Usage: <span id="memory">48%</span></p>
@@ -352,8 +374,36 @@ function simulateThreat(){ const types=['DDoS','SQL Injection','Malware','Phishi
 function playSiren(){ audio.currentTime=0; audio.volume=1; audio.play().catch(()=>console.log('Click required for audio')); }
 function stopSiren(){ audio.pause(); audio.currentTime=0; }
 
-function activateEmergencyLights(){ const lights=document.getElementById('emergency-lights'); lights.classList.remove('hidden'); playSiren(); setTimeout(()=>{ lights.classList.add('hidden'); stopSiren(); },10000); }
-function testLights(){ const lights=document.getElementById('emergency-lights'); if(lights.classList.contains('hidden')){ lights.classList.remove('hidden'); playSiren(); setTimeout(()=>{ lights.classList.add('hidden'); stopSiren(); },8000); } else { lights.classList.add('hidden'); stopSiren(); } }
+/* Red Ripple Wave Activation */
+function activateEmergencyLights(){
+  const lights=document.getElementById('emergency-lights');
+  lights.style.display='block';
+  lights.classList.add('active-wave');
+  playSiren();
+  setTimeout(()=>{
+    lights.classList.remove('active-wave');
+    lights.style.display='none';
+    stopSiren();
+  },8000);
+}
+
+function testLights(){
+  const lights=document.getElementById('emergency-lights');
+  if(lights.style.display==='none' || !lights.style.display){
+    lights.style.display='block';
+    lights.classList.add('active-wave');
+    playSiren();
+    setTimeout(()=>{
+      lights.classList.remove('active-wave');
+      lights.style.display='none';
+      stopSiren();
+    },8000);
+  } else {
+    lights.classList.remove('active-wave');
+    lights.style.display='none';
+    stopSiren();
+  }
+}
 
 function simulateSpecific(type){ scans++; scanCount.innerText=scans; addLog(`${type} detected. Deploying countermeasures...`); status.className='alert'; status.innerText=`Mitigating ${type}...`; activateEmergencyLights(); setTimeout(()=>{ addLog(`${type} neutralized.`); threats[type==='SQL Injection'?'SQL':type]++; neutralizedCount++; neutralized.innerText=neutralizedCount; addIntel(`${type} threat blocked.`); status.className='online'; status.innerText='Online — Monitoring'; updateChart(); },2000); }
 
